--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div dir="{{dir}}">
-  <app-date-picker></app-date-picker>
+
+  <app-nav></app-nav>
+  <div class="footer">
+
+  </div>
+
 
 </div>
-
-
